# gst-rtsp-relay

./: configure.ac
src/: Makefile.am  gst-rtsp-relay-media-factory.c  gst-rtsp-relay-media-factory.h  gst-rtsp-relay.c
