AC_PREREQ(2.52)
AC_INIT(GStreamer-RTSP-Relay, 0.10.0.1)
AM_CONFIG_HEADER([config.h])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
dnl can autoconf find the source ?
AC_CONFIG_SRCDIR([src/gst-rtsp-relay.c])
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_PROG_CC
AM_PROG_CC_C_O
AM_PROG_AS
PKG_PROG_PKG_CONFIG
GST_REQ=0.10.18
PKG_CHECK_MODULES(GST, gstreamer-0.10)
PKG_CHECK_MODULES(GST_RTSP_SERVER, gst-rtsp-server-0.10)
AC_CONFIG_FILES(
Makefile
src/Makefile
)
AC_OUTPUT
